# qrat

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  ReadMe.md  package-osx.sh
artifact/: biteleport.qw  entangleswap.qw  grover-10.qw  grover-15.qw  grover-20.qw  grover-5.qw  loop.qw  networkcoding.qw  relay.qw  secretsharing.qw  teleport.qw  test-command.sh
artifact/autoq/: grover-10.qw  grover-20.qw  grover-21.qw  grover-5.qw
cmake/: ClangTidy.cmake  CompilerOptions.cmake  Doxygen.cmake  ExternalDependencies.cmake  Format.cmake  InstallAndPackage.cmake  PackageAddTest.cmake  PackageAddTests.cmake  ProjectSettings.cmake
doc/: CMakeLists.txt
examples/biteleport/: biteleport.qw
examples/entangleswap/: entangleswap.qw
examples/grover/: generator.js  grover-10.qw  grover-15-44.qw  grover-15.qw  grover-20.qw  grover-5.qw  grover.js  grover.qw  header.js  measure.js  test-grover.sh  test-random-generator.sh
examples/grover/autoq/: grover-10.qw  grover-15.qw  grover-20.qw  grover-21.qw  grover-5.qw
examples/grover/generator/: atomicProps.js  diffusion.js  global.js  grover.js  grover.qw  header.js  index.js  init.js  measure.js  oracle.js  pcheck.js  search.js
examples/loop/: loop.qw  prog-loop.qw
examples/networkcoding/: generator.js  networkcoding.qw
examples/relay/: relay.qw
examples/replay/: replay.qw
examples/secretsharing/: secretsharing.qw
examples/teleport/: TELEPORT.pm  teleport.qw  test-teleport.sh
examples/wmgrover/: wmgrover.qw
generator/grover/: diffusion.js  global.js  init.js  oracle.js  search.js
include/: Configuration.hpp  Person.h  config.h.in  getch.h
include/ast/: AssignStmNode.hpp  AtomicStmNode.hpp  BoolExpNode.hpp  CachedNode.hpp  CondExpNode.hpp  CondStmNode.hpp  ConstExpNode.hpp  ConstNode.hpp  EndStmNode.hpp  EndWhileStmNode.hpp  ExpNode.hpp  GateExpNode.hpp  InitExpNode.hpp  KetExpNode.hpp  MeasExpNode.hpp  Node.hpp  NumExpNode.hpp  OpExpNode.hpp  PropExpNode.hpp  QubitExpNode.hpp  SkipStmNode.hpp  StmNode.hpp  StmSeq.hpp  StmSeqNode.hpp  UnitaryStmNode.hpp  VarNode.hpp  WhileStmNode.hpp
include/core/: ConstSymbol.hpp  Gate.hpp  Interpreter.hpp  PStateTransitionGraph.hpp  Prog.hpp  PropTable.hpp  Search.hpp  SearchGraph.hpp  StateSpaceGraph.hpp  StateTransitionGraph.hpp  StateTransitionGraph2.hpp  Symbol.hpp  SymbolTable.hpp  SyntaxProg.hpp  Token.hpp  VarSymbol.hpp  global.hpp  type.hpp
include/dd/: DDOperation.hpp  DDSimulation.hpp  DDSimulationPackageConfig.hpp  GateMatrixDefinitionExt.hpp  StateGenerator.hpp
include/model/: DTMC.hpp  PrismRunner.hpp  Runner.hpp  RunnerFactory.hpp  StormRunner.hpp
include/parser/: Prog.hpp  Token.hpp  lexerAux.hpp  stringTable.hpp
include/utility/: FileWriter.hpp  HashUtil.hpp  Macros.hpp  StringTable.hpp  Timer.hpp  Tty.hpp  Vector.hpp  fileReader.hpp  macros.hpp  printUtils.hpp
include/utils/: Vector.hpp
src/: CMakeLists.txt  Person.cpp  getch.cpp  main.cpp
src/ast/: AtomicStmNode.cpp  BoolExpNode.cpp  CachedNode.cpp  CondExpNode.cpp  CondStmNode.cpp  ConstExpNode.cpp  ConstNode.cpp  EndStmNode.cpp  EndWhileStmNode.cpp  GateExpNode.cpp  InitExpNode.cpp  KetExpNode.cpp  MeasExpNode.cpp  NumExpNode.cpp  OpExpNode.cpp  PropExpNode.cpp  QubitExpNode.cpp  SkipStmNode.cpp  StmSeq.cpp  StmSeqNode.cpp  UnitaryStmNode.cpp  VarNode.cpp  WhileStmNode.cpp
src/core/: ConstSymbol.cpp  Gate.cpp  Interpreter.cpp  PStateTransitionGraph.cpp  PropTable.cpp  SearchGraph.cpp  StateSpaceGraph.cpp  StateTransitionGraph.cpp  StateTransitionGraph2.cpp  SymbolTable.cpp  SyntaxProg.cpp  Token.cpp  VarSymbol.cpp  global.cpp  type.cpp
src/dd/: DDSimulation.cpp
src/main/: main.cpp  printInfo.cpp  printUtils.cpp
src/model/: DTMC.cpp  PrismRunner.cpp  Runner.cpp  StormRunner.cpp
src/parser/: CMakeLists.txt  Token.cpp  lexer.l  lexerAux.cpp  parser.y  prog-loop.qw  prog-temp.qw  prog.qw  stringTable.cpp
src/utility/: FileWritter.cpp  StringTable.cpp  Timer.cpp  Tty.cpp  fileReader.cpp  printUtils.cpp
test/: CMakeLists.txt  bootstrap.cpp  main.cpp  test.cpp  testScript.sh  test_programs.cpp
test/grover/: grover.expected  grover.qw
test/loop/: loop.expected  loop.qw
test/teleport/: teleport.expected  teleport.qw
